[gd_scene load_steps=9 format=2]

[ext_resource path="res://game_assets/menu/QuitButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://game_assets/menu/SceneChangeButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://game_assets/menu/PauseMenu.gd" type="Script" id=4]
[ext_resource path="res://raw_assets/fonts/MinimalPixel v2.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://raw_assets/fonts/MinimalPixel.tres" type="DynamicFont" id=7]

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=5]
size = 50
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 6 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0, 0, 0.247059 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -399.0
margin_top = 105.485
margin_right = 399.0
margin_bottom = 205.485
custom_fonts/font = ExtResource( 7 )
text = "Pause"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -56.9297
margin_right = 135.5
margin_bottom = 179.07
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="Button" parent="VBoxContainer"]
pause_mode = 2
margin_right = 285.0
margin_bottom = 75.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 4 )
text = "Retry"

[node name="MainMenu" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 79.0
margin_right = 285.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "Main Menu"
script = null

[node name="Quit" parent="VBoxContainer" instance=ExtResource( 1 )]
margin_top = 158.0
margin_right = 285.0
margin_bottom = 235.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
script = null
[connection signal="button_down" from="VBoxContainer/Retry" to="." method="_on_Retry_button_down"]
[connection signal="button_down" from="VBoxContainer/MainMenu" to="." method="_on_MainMenu_button_down"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_Quit_button_up"]
